--- a/security.html
+++ b/security.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oCg8afwU&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nYeipMwa'>Imperva Careers - Cloud Security Engineer, Managed Services</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543317-etas-internship-embedded-security-analyst-at-the-embedded-security-escrypt-dept-'>Bosch Group ETAS_(Internship)_Embedded Security Analyst at the Embedded Security,Escrypt Dept. | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/clear/jobs/1940466'>Job Application for  Senior Security Engineer at CLEAR - Corporate</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -63,7 +71,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/security/enterprise-security-engineer-staff-principal-1307207/?gh_src=82a8057f1'>Enterprise Security Engineer (Staff/Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/security/enterprise-security-engineer-staff-principal-1307207/?gh_src=82a8057f1'>Enterprise Security Engineer (Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -79,7 +87,7 @@
 <p><span class="badge badge-light">Washington, DC  Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Itechstack/743999698526449-centrify-security-architect'>itechstack Centrify Security Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Itechstack/743999698526449-centrify-security-architect'>itechstack Centrify Security Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -244,7 +252,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.theladders.com/job/40967470'>SR. ISeries Security Engineer - Virtual / Travel - Advantage Resourcing | Ladders</a></h5> 
+<h5><a href='https://www.theladders.com/job/40967470'>SR. ISeries Security Engineer - Virtual / Travel - Advantage Resourcing | Ladders</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -257,7 +265,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p>4 days ago ... Description. Exciting Sr. Security Engineer (Symantec / Blue Coat ProxySG), 12 
 months contract Bloomington, IL. Requirements. Primary responsibilities will?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/zup/j/45274230A7/'>Security Engineer - Blue Team - Zup Innovation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/zup/j/45274230A7/'>Security Engineer - Blue Team - Zup Innovation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>16 Out 2019 ... Quem somos?A Zup desenvolve produtos digitais disruptivos que impactam a 
 vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
@@ -310,7 +318,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -338,11 +346,11 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juvo/jobs/1933379'>Job Application for Cloud Security Architect  at Juvo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/juvo/jobs/1933379'>Job Application for Cloud Security Architect  at Juvo</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nSKBmMwQ'>Tenable Careers - Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nSKBmMwQ'>Tenable Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -430,25 +438,13 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">France  France  Paris, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/systems-security-engineer-wmd'>
+<h5><a href='https://careercyresconsulting.recruitee.com/o/systems-security-engineer-wmd'>
       Systems Security Engineer (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">Riga, Latvia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/automotive-security-software-engineer-wmd'>
-      Automotive Security Software Engineer (w/m/d) - CYRES Consulting Services GmbH
-    </a></h5> 
-<p><span class="badge badge-light">Munich</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://careercyresconsulting.recruitee.com/o/security-software-engineer-c-embedded-software-engineer-wmd'>
-      Security Software Engineer C++ / Embedded Software Engineer (w/m/d) - CYRES Consulting Services GmbH
-    </a></h5> 
-<p><span class="badge badge-light">M?nchen</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
