--- a/software.html
+++ b/software.html
@@ -39,6 +39,34 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oU7LafwG&__jvst=Employee+Referral&__jvsd=skRG1iwF&__jvsc=Twitter&bid=nfmipMwz'>NICE inContact Careers - Sr. Software Engineer (Java)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Cineplex/743999698416569-senior-full-stack-software-developer'>Cineplex Senior Full Stack Software Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698288665-senior-software-engineer-machine-learning'>Optimizely Senior Software Engineer, Machine Learning | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698287818-senior-software-engineer-application-backend'>Optimizely Senior Software Engineer, Application Backend | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=smYmMgwd&__jvsc=Twitter&bid=nv8ipMwB'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698540696-full-stack-software-engineer-data-platform'>Traveloka Full Stack Software Engineer - Data Platform | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Jakarta, Indonesia</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/smartly.io/a684bea2-eae6-489e-97b4-77d948ccab3e'>Smartly.io - Software Engineering Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
@@ -79,7 +107,7 @@
 <p><span class="badge badge-light">Portland, Oregon  Portland, OR</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o6fY9fwc&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=ns6fpMwt'>Freedom Financial Network Careers - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=o6fY9fwc&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=ns6fpMwt'>Freedom Financial Network Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -147,7 +175,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -243,7 +271,7 @@
 <p><span class="badge badge-light">San Francisco, CA  Boston, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/logitech/job/oylxafwk'>Logitech Careers - Senior Software Engineer - Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/oylxafwk'>Logitech Careers - Senior Software Engineer - Architect</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -283,7 +311,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Daxko1/743999698525794-senior-software-engineer'>Daxko Senior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Daxko1/743999698525794-senior-software-engineer'>Daxko Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -343,7 +371,7 @@
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oU7LafwG&__jvst=Employee+Referral&__jvsd=sIog3hwb&__jvsc=Twitter&bid=nPpWoMwP'>NICE inContact Careers - Sr. Software Engineer (Java)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oU7LafwG&__jvst=Employee+Referral&__jvsd=sIog3hwb&__jvsc=Twitter&bid=nPpWoMwP'>NICE inContact Careers - Sr. Software Engineer (Java)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -409,34 +437,6 @@
 <hr/>
 <h5><a href='https://jobs.jobvite.com/ringcentral/job/ofQrbfwr'>RingCentral Careers - Senior Software Engineer (Multiple Openings)</a></h5> 
 <p><span class="badge badge-light">California</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/ringcentral/job/ovXrbfwO'>RingCentral Careers - Ruby / Ruby on Rails Software Engineer</a></h5> 
-<p><span class="badge badge-light">Paris, France  Paris</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/ringcentral/job/ozXrbfwS'>RingCentral Careers - Ruby / Ruby on Rails Software Engineer</a></h5> 
-<p><span class="badge badge-light">Paris, France  Paris  Paris</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ozBg8fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nmONoMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer ? Dublin, Ireland</a></h5> 
-<p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=olvS9fwB&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=neJNoMwp'>WW International (formerly Weight Watchers) Careers - Full Stack Software Engineer</a></h5> 
-<p><span class="badge badge-light">San Francisco, California</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/16uzirax4bwc4zkcakcc6xueyr'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
-<p><span class="badge badge-light">Alpharetta, GA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/gh878yb33dwjmja8qcrnfg4z3r'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698498782-software-engineer'>lm group Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
